# Fizika_BSc_szakdolgozat

./: README.md  Simulate_drone.py  detect_kp.py  pyproject.toml
